--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "e2e"
   ],
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha"
   },
   "repository": {
     "type": "git",
@@ -30,7 +30,9 @@
     "@testing-library/dom": "^8.9.0"
   },
   "devDependencies": {
-    "@ember/test-helpers": "^2.5.0"
+    "@ember/test-helpers": "^2.5.0",
+    "ember-cli-htmlbars": "^5.7.1",
+    "mocha": "^9.1.2"
   },
   "peerDependencies": {
     "@ember/test-helpers": "2.x"
